Fix caption spacing

--- a/css/main.css
+++ b/css/main.css
@@ -651,7 +651,7 @@ footer {
         width: 50%;
     }
     .pref-option {
-        /* width: 45%; */
+        width: 45%;
     }
     .mobile-hifi {
         width: 47.5%;
